@@ -1,5 +1,5 @@
 
- OpenSSL 1.0.0p 8 Jan 2015
+ OpenSSL 1.0.0q 15 Jan 2015
 
  Copyright (c) 1998-2011 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
